Suppressed native access warnings caused by the sqlite jdbc plugin